--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <!-- Favicon  -->
     <link
       rel="shortcut icon"
-      href="/Images/favicon.png"
+      href="Images/favicon.png"
       type="image/x-icon"
     />
   </head>
@@ -23,7 +23,7 @@
       <header>
         <div class="logo">
           <img
-            src="/Images/userAsset/s-solid.svg"
+            src="Images/userAsset/s-solid.svg"
             alt="#"
             style="height: 50px; width: 50px; margin: 5px"
           />
@@ -55,24 +55,24 @@
         </div>
         <div class="imgContainer">
           <div class="absolute icons iconDots">
-            <img src="/images/userAsset/dots.png" alt="" />
+            <img src="Images/userAsset/dots.png" alt="" />
           </div>
           <div class="absolute icons icon-cube">
-            <img src="/images/userAsset/cube.png" alt="" />
+            <img src="Images/userAsset/cube.png" alt="" />
           </div>
           <div class="absolute icons icon-circle">
-            <img src="/images/userAsset/circle.png" alt="" />
+            <img src="Images/userAsset/circle.png" alt="" />
           </div>
           <div class="absolute icons iconZigZag">
-            <img src="/images/userAsset/zigzags.png" alt="" />
+            <img src="Images/userAsset/zigzags.png" alt="" />
           </div>
           <div class="absolute icons icon-plus">
-            <img src="/images/userAsset/plus.png" alt="" />
+            <img src="Images/userAsset/plus.png" alt="" />
           </div>
           <div class="">
             <div class="userImage">
               <!-- <img src="images/userAsset/priyansh.jpg" width="345px" height="390px" alt="" /> -->
-              <img src="/Images/userAsset/suvarna.jpg" alt="" />
+              <img src="Images/userAsset/suvarna.jpg" alt="" />
             </div>
           </div>
         </div>
@@ -89,33 +89,33 @@
               <div class="projectSkillsContainer">
                 <img
                   class="projectSkill"
-                  src="/images/stack/HTML.png"
+                  src="Images/stack/HTML.png"
                   alt=""
                 />
                 <img class="projectSkill" src="/images/stack/CSS.png" alt="" />
                 <img
                   class="projectSkill"
-                  src="/images/stack/Javascript.svg"
+                  src="Images/stack/Javascript.svg"
                   alt=""
                 />
                 <img
                   class="projectSkill"
-                  src="/images/stack/Express.png"
+                  src="Images/stack/Express.png"
                   alt=""
                 />
                 <img
                   class="projectSkill"
-                  src="/images/stack/NodeJs.svg"
+                  src="Images/stack/NodeJs.svg"
                   alt=""
                 />
                 <img
                   class="projectSkill"
-                  src="/images/stack/mysql.svg"
+                  src="Images/stack/mysql.svg"
                   alt=""
                 />
                 <img
                   class="projectSkill"
-                  src="/images/stack/Bootstrap.svg"
+                  src="Images/stack/Bootstrap.svg"
                   alt=""
                 />
               </div>
@@ -141,28 +141,28 @@
               <div class="projectSkillsContainer">
                 <img
                   class="projectSkill"
-                  src="/images/stack/android.svg"
+                  src="Images/stack/android.svg"
                   alt=""
                 />
                 <img
                   class="projectSkill"
-                  src="/images/stack/android-studio.svg"
+                  src="Images/stack/android-studio.svg"
                   alt=""
                 />
                 <img
                   class="projectSkill"
-                  src="/images/stack/java.svg"
+                  src="Images/stack/java.svg"
                   alt=""
                 />
 
                 <img
                   class="projectSkill"
-                  src="/images/stack/mysql.svg"
+                  src="Images/stack/mysql.svg"
                   alt=""
                 />
                 <img
                   class="projectSkill"
-                  src="/images/stack/firebase.svg"
+                  src="Images/stack/firebase.svg"
                   alt=""
                 />
               </div>
@@ -206,22 +206,22 @@
 
         <div class="rightSkillContainer">
           <img
-            src="/images/userAsset/blob vector.png"
+            src="Images/userAsset/blob vector.png"
             class="blobStyle"
             alt=""
           />
 
-          <img src="/images/stack/HTML.png" alt="" class="skillsLogo" />
-          <img src="/images/stack/CSS.png" alt="" class="skillsLogo" />
-          <img src="/images/stack/Javascript.svg" alt="" class="skillsLogo" />
-          <img src="/images/stack/NodeJs.svg" alt="" class="skillsLogo" />
-          <img src="/images/stack/mysql.svg" alt="" class="skillsLogo" />
-          <img src="/images/stack/Bootstrap.svg" alt="" class="skillsLogo" />
-          <img src="/images/stack/Express.png" alt="" class="skillsLogo" />
-          <img src="/images/stack/Git.svg" alt="" class="skillsLogo" />
-          <img src="/images/stack/Github.svg" alt="" class="skillsLogo" />
-          <img src="/images/stack/Bash.svg" alt="" class="skillsLogo" />
-          <img src="/images/stack/java.svg" alt="" class="skillsLogo" />
+          <img src="Images/stack/HTML.png" alt="" class="skillsLogo" />
+          <img src="Images/stack/CSS.png" alt="" class="skillsLogo" />
+          <img src="Images/stack/Javascript.svg" alt="" class="skillsLogo" />
+          <img src="Images/stack/NodeJs.svg" alt="" class="skillsLogo" />
+          <img src="Images/stack/mysql.svg" alt="" class="skillsLogo" />
+          <img src="Images/stack/Bootstrap.svg" alt="" class="skillsLogo" />
+          <img src="Images/stack/Express.png" alt="" class="skillsLogo" />
+          <img src="Images/stack/Git.svg" alt="" class="skillsLogo" />
+          <img src="Images/stack/Github.svg" alt="" class="skillsLogo" />
+          <img src="Images/stack/Bash.svg" alt="" class="skillsLogo" />
+          <img src="Images/stack/java.svg" alt="" class="skillsLogo" />
         </div>
       </section>
       <!-- Skill Section End  -->
